case-study/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: artford
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: apache
        image: httpd 
        ports:
        - containerPort: 80
