case-study/custom.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-deployment
  namespace: artford
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: custom
        image: artford7174/k8s-case_study:1.0 
        ports:
        - containerPort: 80
