case-study/apache-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: apache-deployment
  namespace: artford
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - protocol: TCP
      port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 30007
