case-study/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-custom
  namespace: artford
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "intellipaat.com"
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-deployment
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: custom-deployment
            port:
              number: 80
